--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.18",
     "groq-sdk": "^0.5.0",
     "next": "14.2.5",
+    "openai": "^4.53.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,10 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5"
   }
 }
