--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@next/font": "^14.2.5",
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.18",
+    "github-markdown-css": "^5.6.1",
     "groq-sdk": "^0.5.0",
+    "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "openai": "^4.53.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
